--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ dependencies = [
 pdbpp = "^0.11.6"
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
+mypy = "^1.15.0"
+
+[project.scripts]
+espn-players = "espn_api_extractor.runners.players:main"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
