--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -26,7 +26,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install poetry
           poetry install
-          mypy --install-types
+          poetry run mypy --install-types
 
       - name: Run mypy type checking
         run: |
