--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,14 @@
 [project]
 name = "espn-api-extractor"
-version = "0.1.0"
+version = "0.2.0"
 description = "API for Extracting ESPN API Data"
-authors = [
-    {name = "Taylor \"TP\" Pubins",email = "tpubz@icloud.com"}
-]
+authors = [{ name = "Taylor \"TP\" Pubins", email = "tpubz@icloud.com" }]
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "pydantic (>=2.11.4,<3.0.0)",
-    "tqdm (>=4.67.1,<5.0.0)"
+    "tqdm (>=4.67.1,<5.0.0)",
 ]
 
 [tool.poetry]
@@ -29,3 +27,13 @@ espn-players = "espn_api_extractor.runners.players:main"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+markers = [
+    "integration: marks tests as integration tests (may require external services)",
+    "slow: marks tests as slow running"
+]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
