--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -21,12 +21,13 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
+
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install poetry
-          poetry install
+        run: uv sync --all-extras
 
       - name: Run mypy type checking
-        run: |
-          poetry run mypy espn_api_extractor
+        run: uv run mypy espn_api_extractor
