--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -15,21 +15,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-        
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
+      with:
+        enable-cache: true
+
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install poetry
-        poetry install
-        
+      run: uv sync --all-extras
+
     - name: Test with pytest and coverage
-      run: |
-        poetry run pytest --cov=espn_api_extractor --cov-report=xml tests/
+      run: uv run pytest --cov=espn_api_extractor --cov-report=xml tests/
         
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
