--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,6 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+
+[tool.mypy]
+ignore_missing_imports = false
